--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,8 @@
 body
 {
     color: #333;
-    text-align: left;
-    font-family: Arial;
     text-align: center;
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -11,8 +10,8 @@ body
 
 #cabecera
 {
-    background: #33a;
-    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
@@ -31,7 +30,7 @@ body
     width: 70%;
     padding: 0;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
@@ -39,9 +38,7 @@ body
 {
     font-size: 20px;
 }
-
 #post
 {
     padding: 1em;
-
 }
